--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,5 +5,10 @@ app:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
+
+NelmioApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix:   /api/doc
+
 api_login_check:
     path: /api/login_check
