--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -48,5 +48,6 @@ security:
           - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/admin/, role: ROLE_ADMIN }
           - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+          -  { path: ^/api/doc, roles: IS_AUTHENTICATED_ANONYMOUSLY }
           - { path: ^/api, roles: IS_AUTHENTICATED_ANONYMOUSLY, methods:[GET] }
           - { path: ^/api,  roles: IS_AUTHENTICATED_FULLY }
